# clawpal

./: .gitignore  README.md  cc-architecture-refactor-v1.md  cc.md  index.html  package-lock.json  package.json
clawpal-cli/: Cargo.toml
clawpal-core/: Cargo.toml
clawpal-core/src/: backup.rs  config.rs  connect.rs  cron.rs  discovery.rs  doctor.rs  health.rs  instance.rs  openclaw.rs  precheck.rs  profile.rs  sessions.rs  watchdog.rs
clawpal-core/src/install/: docker.rs  mod.rs
clawpal-core/src/ssh/: diagnostic.rs  mod.rs  registry.rs
clawpal-core/tests/: docker_live.rs  oauth_e2e.rs  profile_e2e.rs  workflow_integration.rs
docs/: CNAME  mvp-checklist.md  recipe-authoring.md  recipe-cli-action-catalog.md  recipe-runner-boundaries.md  release-prerelease-workflow.md
scripts/: generate_dmg_background.swift  (+1 more)
src-tauri/: Cargo.toml  recipes.json  tauri.conf.json
src-tauri/src/: agent_fallback.rs  agent_identity.rs  bridge_client.rs  cli_runner.rs  commands.rs  doctor.rs  doctor_commands.rs  execution_spec.rs  execution_spec_tests.rs  history.rs  install_commands.rs  lib.rs  logging.rs  main.rs  markdown_document.rs  models.rs  node_client.rs  openclaw_doc_resolver.rs  path_fix.rs  prompt_templates.rs  recipe.rs  recipe_action_catalog.rs  recipe_adapter.rs  recipe_adapter_tests.rs  recipe_bundle.rs  recipe_bundle_tests.rs  recipe_executor.rs  recipe_executor_tests.rs  recipe_library.rs  recipe_library_tests.rs  recipe_planner.rs  recipe_planner_tests.rs  recipe_source_tests.rs  recipe_store.rs  recipe_store_tests.rs  recipe_workspace.rs  recipe_workspace_tests.rs  ssh.rs  util.rs
src-tauri/src/bug_report/: collector.rs  mod.rs  os_info.rs  queue.rs  reporter.rs  sanitize.rs  settings.rs
src-tauri/src/commands/: agent.rs  config.rs  discover.rs  discovery.rs  doctor.rs  doctor_assistant.rs  logs.rs  mod.rs  overview.rs  precheck.rs  preferences.rs  profiles.rs
src-tauri/src/install/: commands.rs  types.rs
src-tauri/src/install/runners/: docker.rs  local.rs  mod.rs  remote_ssh.rs  wsl2.rs
src-tauri/src/recipe_runtime/: systemd.rs
src-tauri/src/runtime/: types.rs
src-tauri/src/runtime/zeroclaw/: adapter.rs  cost.rs  install_adapter.rs  mod.rs  process.rs  sanitize.rs  session.rs  streaming.rs  tool_intent.rs
src-tauri/tests/: cli_runner_test.rs  commands_delegation.rs  docker_profile_sync_e2e.rs  doctor_doc_context.rs  doctor_engine.rs  install_api.rs  recipe_docker_e2e.rs  remote_api.rs  runtime_zeroclaw_sanitize.rs  wsl2_runner.rs
(+200 files in other folders)
