[package]
name = "clawpal-core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["serde", "v4"] }
russh = "0.45"
russh-keys = "0.45"
russh-sftp = "2.0"
shellexpand = "3.1"
