[package]
name = "clawpal-core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json5 = "0.4"
thiserror = "1.0"
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros", "io-util"] }
uuid = { version = "1", features = ["serde", "v4"] }
shellexpand = "3.1"
russh = "0.46"
russh-keys = "0.46"
russh-sftp = "2.0"
dirs = "5"
async-trait = "0.1"
regex = "1.11"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
